Created sign in page.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <html>
 	<body>
-		<h1>Server up and running...</h1>
 		<head>
-			<title>wm-dev01</title>
+			<title>Project Faro - Sign in</title>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+			<link rel="stylesheet" href="assets/css/signin.css"
 		</head>
-		<p>This is the default web page for this server.</p>
-		<p>The web server software is running but no content has been added, yet.</p>
+		<div class="container">  
+			<form class="form-signin">
+				<h2 class="form-signin-heading">Project Faro</h2>
+				<input type="text" class="input-block-level" placeholder="Email address">
+				<input type="password" class="input-block-level" placeholder="Password">
+				<label class="checkbox">
+					<input type="checkbox" value="remember-me">
+						 Remember me 
+				</label>
+				<button class="btn btn-medium btn-primary" type="submit">Sign in</button>
+			</form>
+		</div>
 	</body>
 </html>
