--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<head>
 			<title>Project Faro - Sign in</title>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+			<link rel="stylesheet" href="assets/css/bootstrap.css">
 			<link rel="stylesheet" href="assets/css/signin.css"
 		</head>
 		<div class="container">  
